src/sample/Errors/C0004_not_implemented.st
// C0004: '{y}' is no component of '{type of x}'
// SAMPLE: THIS^.A; (where A is not defined)
// This error will not be implemented because we will always trigger C0046 instead.